# UQ-FEATURE-SPACE

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  env_setup.sh  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  docs.yaml  idea.yaml
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml  settings.yml  type_check.yml
docs/: CONTRIBUTING.md  gen_ref_pages.py  index.md
docs/about/: acknowledgements.md  contributors.md  faq.md  license.md
docs/getting-started/: installation.md  quickstart.md
docs/maintainers/: internal.md
notebooks/: README.md
scripts/: check_release_branch.py  init_project.py
src/package_name/: __init__.py
src/uq_feature/: __init__.py
src/uq_feature/cli/: main.py
src/uq_feature/config/: ace.yaml
src/uq_feature/descriptors/ace/: ace.jl  core.py
src/uq_feature/pipeline/: runner.py
tests/: test_package.py
